--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,27 @@
+appdirs==1.4.4
+black==20.8b1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
+Deprecated==1.2.12
+distro==1.5.0
 Django==2.2.17
-psycopg2-binary>=2.8
-pytz==2020.5
-sqlparse==0.4.1
 gunicorn==20.0.4
+idna==2.10
+isort==5.8.0
+jsonfield==3.1.0
+mypy-extensions==0.4.3
+pathspec==0.8.1
+Pillow==8.1.2
+psycopg2-binary==2.8.6
+pytz==2020.5
+PyYAML==5.4.1
+regex==2021.3.17
+requests==2.25.1
+sqlparse==0.4.1
+toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+wrapt==1.12.1
+yookassa==2.0.1
